FIX: bg on mobile

--- a/assets/sass/components/_about.sass
+++ b/assets/sass/components/_about.sass
@@ -40,6 +40,8 @@
 @media (max-width: 1200px)
     .about
         background-position: 0% 100%
+        background-image: none
+        background-color: #141414
 
 
 @media (max-width: 768px)
