--- a/assets/sass/components/_header.sass
+++ b/assets/sass/components/_header.sass
@@ -137,5 +137,8 @@
 
 
 @media (max-width: 450px)
+    .body__wrapper
+        background-color: #2a2a2a
+        background-image: none
     .header__inner-item button
         padding: 15px
