--- a/assets/sass/components/_popup.sass
+++ b/assets/sass/components/_popup.sass
@@ -371,20 +371,15 @@ form
         width: 100%
         max-width: 100%
         padding: 25px 10px 0px 10px
-    .popup__text-form
-        flex-direction: column
-
-        &::before
-            display: none
 
     input[type=number]
-        width: 100%
-        margin-bottom: 20px
+        width: 30%
         margin-right: 0px
         text-indent: 15px
 
     input[type=tel]
-        width: 100%
+        width: 70%
+        margin-left: 10px
 
 .active
     display: block !important
